--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,7 @@ executors:
 orbs:
   kubernetes: circleci/kubernetes@0.3.0
   helm: circleci/helm@0.1.2
+  snyk: snyk/snyk@0.0.9
 
 jobs:
   build:
@@ -74,6 +75,11 @@ jobs:
       - run:
           name: Install dependencies
           command: yarn install --frozen-lockfile
+      - snyk/scan:
+          fail-on-issues: false
+          monitor-on-build: true
+          project: '${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BRANCH}'
+          organization: 'digital-probation-services'
       - save_cache:
           key: dependencies-cache-{{ checksum "package.json" }}
           paths:
@@ -176,6 +182,13 @@ jobs:
              docker push mojdigitalstudio/prepare-a-case:$APP_VERSION
              docker push mojdigitalstudio/prepare-a-case:latest
             fi
+      - snyk/scan:
+          docker-image-name: 'mojdigitalstudio/prepare-a-case:latest'
+          target-file: 'Dockerfile'
+          fail-on-issues: false
+          monitor-on-build: true
+          project: '${CIRCLE_PROJECT_REPONAME}/latest'
+          organization: 'digital-probation-services'
 
   deploy_dev:
     executor: deployer
