--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prepare-a-case",
-  "version": "1.0.0-beta",
+  "version": "1.0.0",
   "description": "A service to allow probation staff to prepare court cases",
   "author": "MoJ D&T Probation in Court <probation-in-court-team@digital.justice.gov.uk>",
   "license": "MIT",
@@ -11,7 +11,7 @@
     "url": "https://github.com/ministryofjustice/prepare-a-case.git"
   },
   "engines": {
-    "node": ">=14.17.0 <15.0.0 || >=16.2.0"
+    "node": ">=14.17.3 <15.0.0 || >=16.2.0"
   },
   "scripts": {
     "precommit": "npm run lint && npm run unit-test && npm run int-test",
@@ -69,7 +69,7 @@
     "stepDefinitions": "integration-tests/integration/"
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "0.2.4",
+    "@ministryofjustice/frontend": "0.2.5",
     "accessible-autocomplete": "2.0.3",
     "agentkeepalive": "4.1.4",
     "applicationinsights": "2.1.3",
@@ -83,7 +83,7 @@
     "cookie-parser": "1.4.5",
     "cookie-session": "1.4.0",
     "csurf": "1.11.0",
-    "debug": "4.3.1",
+    "debug": "4.3.2",
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "express-session": "1.17.2",
@@ -94,30 +94,30 @@
     "jwt-decode": "3.1.2",
     "moment": "2.29.1",
     "morgan": "1.10.0",
-    "nock": "13.1.0",
+    "nock": "13.1.1",
     "nunjucks": "3.2.3",
     "passport": "0.4.1",
-    "passport-oauth2": "1.5.0",
+    "passport-oauth2": "1.6.0",
     "redis": "3.1.2",
     "superagent": "6.1.0"
   },
   "devDependencies": {
     "@cucumber/cucumber": "7.3.0",
     "@pact-foundation/pact": "9.16.0",
-    "ajv": "8.6.0",
+    "ajv": "8.6.1",
     "ajv-errors": "3.0.0",
     "axe-core": "4.2.3",
-    "cypress": "7.6.0",
+    "cypress": "7.7.0",
     "cypress-axe": "0.12.2",
-    "cypress-cucumber-preprocessor": "4.1.2",
-    "jest": "27.0.5",
+    "cypress-cucumber-preprocessor": "4.1.3",
+    "jest": "27.0.6",
     "jest-junit": "12.2.0",
     "jest-pact": "0.9.1",
     "minify": "7.0.2",
     "mockdate": "3.0.5",
     "moxios": "0.4.0",
     "node-sass": "6.0.1",
-    "nodemon": "2.0.7",
+    "nodemon": "2.0.9",
     "redis-mock": "0.56.3",
     "standard": "16.0.3",
     "supertest": "6.1.3"
