--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "url": "https://github.com/ministryofjustice/prepare-a-case.git"
   },
   "engines": {
-    "node": ">=14.17.5 <15.0.0 || >=16.2.0"
+    "node": ">=14.18.1 <15.0.0 || >=16.11.1 <17.0.0",
+    "npm": ">=6.4.1 <7.0.0 || >=7.22.0"
   },
   "scripts": {
     "precommit": "npm run lint && npm run unit-test && npm run int-test",
@@ -72,9 +73,9 @@
     "@ministryofjustice/frontend": "0.2.6",
     "accessible-autocomplete": "2.0.3",
     "agentkeepalive": "4.1.4",
-    "applicationinsights": "2.1.7",
+    "applicationinsights": "2.1.8",
     "applicationinsights-native-metrics": "0.0.6",
-    "axios": "0.21.4",
+    "axios": "0.23.0",
     "axios-middleware": "0.3.1",
     "bunyan": "1.8.15",
     "bunyan-format": "0.2.1",
@@ -87,8 +88,8 @@
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "express-session": "1.17.2",
-    "express-validator": "6.12.1",
-    "govuk-frontend": "3.13.1",
+    "express-validator": "6.13.0",
+    "govuk-frontend": "3.14.0",
     "helmet": "4.6.0",
     "jsonwebtoken": "8.5.1",
     "jwt-decode": "3.1.2",
@@ -103,23 +104,23 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "7.3.1",
-    "@pact-foundation/pact": "^9.16.4",
+    "@pact-foundation/pact": "9.16.4",
     "ajv": "8.6.3",
     "ajv-errors": "3.0.0",
     "axe-core": "4.3.3",
-    "cypress": "8.4.1",
+    "cypress": "8.6.0",
     "cypress-axe": "0.13.0",
-    "cypress-cucumber-preprocessor": "^4.3.0",
-    "jest": "27.2.1",
-    "jest-junit": "^13.0.0",
+    "cypress-cucumber-preprocessor": "4.3.0",
+    "jest": "27.3.1",
+    "jest-junit": "13.0.0",
     "jest-pact": "0.9.1",
-    "minify": "7.1.0",
+    "minify": "8.0.3",
     "mockdate": "3.0.5",
     "moxios": "0.4.0",
-    "node-sass": "^6.0.1",
-    "nodemon": "2.0.12",
+    "node-sass": "6.0.1",
+    "nodemon": "2.0.13",
     "redis-mock": "0.56.3",
-    "standard": "^16.0.4",
+    "standard": "16.0.4",
     "supertest": "6.1.6"
   }
 }
