--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "stop": "docker compose down",
     "build": "docker compose pull && docker compose build",
     "test": "npm run test:lint && npm run test:unit && npm run test:pact && npm run test:int",
-    "test:lint": "docker exec -it prepare-a-case-app /usr/src/app/node_modules/.bin/standard",
+    "test:lint": "docker exec -it prepare-a-case-app /app/node_modules/.bin/standard",
     "test:lint:fix": "npm run test:lint -- --fix",
-    "test:unit": "docker exec -it -e ENABLE_HEARING_OUTCOMES=false prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.config.js --detectOpenHandles --ci --forceExit",
-    "test:pact": "docker exec -it prepare-a-case-app /usr/src/app/node_modules/.bin/jest --config=./tests/jest.pact.config.js --detectOpenHandles --ci --forceExit",
+    "test:unit": "docker exec -it -e ENABLE_HEARING_OUTCOMES=false prepare-a-case-app /app/node_modules/.bin/jest --config=./tests/jest.config.js --detectOpenHandles --ci --forceExit",
+    "test:pact": "docker exec -it prepare-a-case-app /app/node_modules/.bin/jest --config=./tests/jest.pact.config.js --detectOpenHandles --ci --forceExit",
     "test:int": "DISPLAY= docker compose -f compose/docker-compose.cypress-run.yml up --abort-on-container-exit",
-    "test:int:ui": "/usr/X11/bin/xhost + 127.0.0.1 && DISPLAY=host.docker.internal:0 docker compose -f compose/docker-compose.cypress-ui.yml up --abort-on-container-exit"
+    "test:int:ui": "/usr/X11/bin/xhost + 127.0.0.1 && DISPLAY=host.docker.internal:0 docker compose -f compose/docker-compose.cypress-ui.yml up --abort-on-container-exit",
+    "security_audit": "npx audit-ci --config audit-ci.json"
   },
   "config": {
     "pact_do_not_track": true
@@ -62,8 +63,7 @@
     "agentkeepalive": "^4.2.1",
     "applicationinsights": "2.9.2",
     "applicationinsights-native-metrics": "0.0.10",
-    "axios": "1.1.0",
-    "axios-middleware": "0.4.0",
+    "axios": "1.9.0",
     "bootstrap": "^5.3.2",
     "bunyan": "1.8.15",
     "bunyan-format": "0.2.1",
@@ -89,7 +89,7 @@
     "superagent": "7.1.3"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "^12.1.2",
+    "@pact-foundation/pact": "15.0.1",
     "ajv": "8.11.0",
     "ajv-errors": "3.0.0",
     "jest": "^29.7.0",
