--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,6 @@ services:
     container_name: hmpps-auth
     networks:
       - hmpps
-    volumes:
-      - ./wiremock/mappings/hmpps-auth:/home/wiremock/mappings
     entrypoint: ["/docker-entrypoint.sh", "--disable-request-logging", "--disable-banner", "--global-response-templating"] #"--verbose"
     restart: always
     ports:
@@ -63,6 +61,7 @@ services:
       - ./pact:/app/pact
       - ./schemas:/app/schemas
       - ./wiremock:/app/wiremock
+      - ./integration-tests:/app/integration-tests
     environment:
       - REDIS_HOST=redis
       - PORT=3000
