--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "start": "docker compose up",
+    "start:auth": "docker compose -f docker-compose.yml -f compose/user-auth.yml up",
     "start:detached": "npm run start -- --wait -d",
     "stop": "docker compose down",
     "build": "docker compose pull && docker compose build",
@@ -19,9 +20,9 @@
     "test:lint:fix": "npm run test:lint -- --fix",
     "test:unit": "docker exec -it -e ENABLE_HEARING_OUTCOMES=false prepare-a-case-app /app/node_modules/.bin/jest --config=./tests/jest.config.js --detectOpenHandles --ci --forceExit",
     "test:pact": "docker exec -it prepare-a-case-app /app/node_modules/.bin/jest --config=./tests/jest.pact.config.js --detectOpenHandles --ci --forceExit",
-    "test:int": "DISPLAY= docker compose -f compose/docker-compose.cypress-run.yml up --abort-on-container-exit",
-    "test:int:ui": "/usr/X11/bin/xhost + 127.0.0.1 && DISPLAY=host.docker.internal:0 docker compose -f compose/docker-compose.cypress-ui.yml up --abort-on-container-exit",
-    "security_audit": "npx audit-ci --config audit-ci.json"
+    "security_audit": "npx audit-ci --config audit-ci.json",
+    "int-test": "cypress run --config-file integration-tests/cypress/cypress.config.js video=false",
+    "int-test-ui": "npx cypress open --config-file integration-tests/cypress/cypress.config.js --e2e --browser chrome"
   },
   "config": {
     "pact_do_not_track": true
@@ -92,6 +93,8 @@
     "@pact-foundation/pact": "15.0.1",
     "ajv": "8.11.0",
     "ajv-errors": "3.0.0",
+    "axe-core": "^4.10.3",
+    "cypress": "^14.4.1",
     "jest": "^29.7.0",
     "jest-junit": "13.2.0",
     "jest-pact": "^0.11.0",
