--- a/package.json
+++ b/package.json
@@ -64,19 +64,19 @@
     "agentkeepalive": "^4.2.1",
     "applicationinsights": "2.9.2",
     "applicationinsights-native-metrics": "0.0.10",
-    "axios": "1.9.0",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.2",
     "bunyan": "1.8.15",
     "bunyan-format": "0.2.1",
-    "compression": "1.7.4",
+    "compression": "^1.8.1",
     "connect-redis": "6.1.3",
     "cookie-parser": "1.4.7",
-    "cookie-session": "2.0.0",
+    "cookie-session": "^2.1.1",
     "debug": "4.3.4",
     "dotenv": "16.0.0",
     "express": "4.21.2",
     "express-http-proxy": "^2.0.0",
-    "express-session": "1.18.1",
+    "express-session": "^1.18.2",
     "express-validator": "6.14.0",
     "govuk-frontend": "^5.1.0",
     "helmet": "4.6.0",
